--- a/Project1/Milestone 3/index.html
+++ b/Project1/Milestone 3/index.html
@@ -62,6 +62,7 @@
 
 	<!-- Add Scripts Here -->
 	<script src="https://d3js.org/d3.v6.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/m2.js"></script>
+	<script src="js/m3.js"></script>
 </body>
 </html>
