--- a/Project1/Milestone 3/index.html
+++ b/Project1/Milestone 3/index.html
@@ -63,6 +63,6 @@
 	<!-- Add Scripts Here -->
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script src="js/m2.js"></script>
-	<script src="js/m3.js"></script>
+	<script src="js/songs.js"></script>
 </body>
 </html>
