--- a/Project3/Milestone 3/index.html
+++ b/Project3/Milestone 3/index.html
@@ -16,7 +16,7 @@
 			<p>With this visualization, let's look at the number of Black, Hispanic and Asian nominees from the first ceremony in 1928 until 2021. We will focus on some of the most prestigious awards: Best Actor in Leading Role, Best Actress in Leading Role, Best Actor in Supporting Role, Best Actress in Supporting Role, Best Director, Best Picture and Best Writing (Original and Adapted Screenplay).</p>
 		</div>
 
-		<div class="filters hidden">
+		<div class="filters">
 			<div class="row">
 				<div class="col-4">
 					<div class="filter filter-award">
